@@ -1,3 +1,8 @@
+Fri Aug 14 12:20:16 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* manual/Makefile.am (install-data-hook, uninstall-hook):
+	  Install/uninstall the manual into/from $(docdir).
+
 Fri Aug 14 12:18:43 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* docs/Makefile.am (dist_noinst_DATA): Move NEWS to ...
